<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout style="@style/toolbar">

                <ImageView
                        android:id="@+id/back"
                        android:src="@drawable/ic_action_navigation_arrow_back"
                        style="@style/toolbar_action"/>

                <TextView
                        android:id="@+id/title"
                        android:text="Add New / Edit Currency"
                        style="@style/toolbar_title"/>

                <LinearLayout style="@style/toolbar_actions_container">

                        <ImageView
                                android:id="@+id/delete"
                                android:src="@drawable/ic_action_action_delete"
                                style="@style/toolbar_action"/>

                        <ImageView
                                android:id="@+id/save"
                                android:src="@drawable/ic_action_action_done"
                                style="@style/toolbar_action"/>

                </LinearLayout>

        </RelativeLayout>

        <ScrollView
                style="@style/below_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                        android:orientation="vertical"
                        android:padding="11dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView android:text="@string/name" style="@style/form_field_title"/>

                    <EditText
                        android:hint="@string/currency_name"
                        android:id="@+id/name"
                        style="@style/form_field_input"/>

                    <TextView android:text="@string/symbol" style="@style/form_field_title"/>

                    <EditText
                        android:hint="@string/currency_symbol"
                        android:id="@+id/symbol"
                        style="@style/form_field_input"/>

                    <TextView android:text="@string/code" style="@style/form_field_title"/>

                    <EditText
                        android:hint="@string/currency_code"
                        android:id="@+id/code"
                        style="@style/form_field_input"/>

                    <TextView android:text="@string/factor" style="@style/form_field_title"/>

                    <EditText
                        android:hint="@string/currency_factor"
                        android:id="@+id/factor"
                        style="@style/form_field_input"/>

                </LinearLayout>
        </ScrollView>
</RelativeLayout>